--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-Imports: stats
+Imports:
+    stats,
+    data.table
+Suggests:
+    ggplot2
