--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: NMcalc
 Title: Basic Calculations for PK/PD Modeling
-Version: 0.0.2.901
+Version: 0.0.3.902
 Authors@R: person("Philip", "Delff", email = "philip@delff.dk",
                   role = c("aut", "cre"))
 Maintainer: Philip Delff <philip@delff.dk>
@@ -14,4 +14,7 @@ Imports:
     stats,
     data.table
 Suggests:
+    testthat,
     ggplot2
+BugReports: https://github.com/philipdelff/NMdata/issues
+Language: en-US
